<resources>
    <string name="app_name">Umbrella</string>
    <string name="main_title">Umbrella Rent</string>
    <string name="main_text">       대여 및 반납을 원하시면 \n아래의 태그기에 태그해주세요.</string>
    <string name="user_rent">대여</string>
    <string name="user_return">반납</string>
    <string name="user_num">원하시는 사물함 번호를 선택해주세요.</string>
    <string name="user_one">1번</string>
    <string name="user_two">2번</string>
    <string name="user_three">3번</string>
    <string name="user_four">4번</string>
    <string name="user_text">Umbrella Rent</string>
    <string name="user_next">다음</string>
    <string name="admin_bluetooth">bluetooth</string>
    <string name="admin_open">Open</string>
    <string name="admin_lock">Lock</string>
    <string name="admin_button">관리자</string>
    <string name="admin_login">Login</string>
    <string name="admin_text">Umbrella Admin Login</string>
    <string name="finish_finish">이용해 주셔서 감사합니다.</string>
    <string name="finish_success">대여 / 반납이 완료되었습니다. </string>
    <string name="finish_next">3초 후 처음 화면으로 이동합니다. </string>
    <string name="trouble_notify">고장난 우산을 신고해주세요. </string>
    <string name="trouble_phone">010-1234-5678 </string>
    <string name="trouble_thanks">감사합니다.  </string>
</resources>