<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/blue"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/button"
        android:layout_width="200sp"
        android:layout_height="60sp"
        android:layout_marginLeft="150sp"
        android:layout_marginTop="100sp"
        android:text="@string/admin_bluetooth"
        android:textSize="18sp"
        tools:layout_editor_absoluteX="103dp"
        tools:layout_editor_absoluteY="85dp" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="150sp"
        android:layout_marginTop="220sp"
        android:text="@string/user_num"
        android:textColor="#000000"
        android:textSize="18sp"
        tools:layout_editor_absoluteX="104dp"
        tools:layout_editor_absoluteY="159dp" />

    <Button
        android:id="@+id/button8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="450sp"
        android:layout_marginTop="250sp"
        android:text="@string/user_four"
        tools:layout_editor_absoluteX="109dp"
        tools:layout_editor_absoluteY="200dp" />

    <Button
        android:id="@+id/button9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="350sp"
        android:layout_marginTop="250sp"
        android:text="@string/user_three"
        tools:layout_editor_absoluteX="109dp"
        tools:layout_editor_absoluteY="260dp" />

    <Button
        android:id="@+id/button10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="250sp"
        android:layout_marginTop="250sp"
        android:text="@string/user_two"
        tools:layout_editor_absoluteX="372dp"
        tools:layout_editor_absoluteY="224dp" />

    <Button
        android:id="@+id/button11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="150sp"
        android:layout_marginTop="250sp"
        android:text="@string/user_one"
        tools:layout_editor_absoluteX="236dp"
        tools:layout_editor_absoluteY="261dp" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="150sp"
        android:layout_marginTop="60sp"
        android:text="Umbrella Rent Admin"
        android:textColor="#0000ff"
        android:textSize="24sp" />

    <Button
        android:id="@+id/button15"
        android:layout_width="200sp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="150sp"
        android:layout_marginTop="300sp"
        android:text="@string/admin_open" />

    <Button
        android:id="@+id/button16"
        android:layout_width="200sp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="350sp"
        android:layout_marginTop="300sp"
        android:text="@string/admin_lock" />

    <Button
        android:id="@+id/button18"
        android:onClick="onClickLogout"
        android:layout_width="200sp"
        android:layout_height="60sp"
        android:layout_marginLeft="350sp"
        android:layout_marginTop="100sp"
        android:text="Logout"
        android:textSize="18sp" />
</RelativeLayout>