<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue">

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="90sp"
        android:text="@string/main_title"
        android:textColor="#0000ff"
        android:textSize="70sp" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="200sp"
        android:text="@string/trouble_notify"
        android:textColor="#000000"
        android:textSize="22sp" />

    <TextView
        android:id="@+id/textView14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="250sp"
        android:text="@string/trouble_phone"
        android:textColor="#0000ff"
        android:textSize="26sp" />

    <TextView
        android:id="@+id/textView15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="300sp"
        android:text="@string/trouble_thanks"
        android:textColor="#000000"
        android:textSize="22sp" />

    <Button
        android:id="@+id/button9"
        android:onClick="onClickBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="back" />
</RelativeLayout>