<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/blue"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="100sp"
        android:layout_marginTop="210sp"
        android:text="@string/finish_success"
        android:textSize="22sp"
        tools:layout_editor_absoluteX="147dp"
        tools:layout_editor_absoluteY="113dp" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="100sp"
        android:layout_marginTop="250sp"
        android:text="@string/finish_finish"
        android:textSize="22sp"
        tools:layout_editor_absoluteX="147dp"
        tools:layout_editor_absoluteY="179dp" />

    <TextView
        android:id="@+id/textView9"
        android:textColor="#0000ff"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="90sp"
        android:text="@string/main_title"
        android:textSize="70sp" />
</RelativeLayout>